setup dataaccess online

--- a/index.html
+++ b/index.html
@@ -25,43 +25,30 @@
   //View switching logic
   var viewEventHandler = require("./lib/viewEventHandler");
   var playbookOverview = require("./lib/playbook-overview");
-  
+  var dataAccess = require("./lib/data-access");
+
   viewEventHandler.on("renderedView", function(elementId, renderedView) {
     $("#" + elementId).html(renderedView);
   });
   
-  var showContent = function(view, selectedId, context){
+  var showContent = function(view, selectedId, context) {
     //go to the correct view javascript and process the initial data to pass to the template
     //this applied to nav buttons not logic in the actual views.
     var viewData;
     if(view == "playbook-overview")
     {
-      viewData = playbookOverview.onLoad(selectedId);
+      playbookOverview.onLoad(selectedId);
+    }
+    else {
+      viewEventHandler.emit("view-selected", "top-bar", "top-bar", viewData);
+      viewEventHandler.emit("view-selected", "side-nav", "side-nav", context);    
+      viewEventHandler.emit("view-selected", "main", view, viewData);
     }    
-    
-    viewEventHandler.emit("view-selected", "top-bar", "top-bar", viewData);
-    viewEventHandler.emit("view-selected", "side-nav", "side-nav", context);    
-    viewEventHandler.emit("view-selected", "main", view, viewData);
   };
 
   //startup
-  $(function() {  
-    showContent("home", "home", fakeData);
-    $(document).on("click",".nav",function(ev) {
-      ev.preventDefault();
-      if(this.id === "home"){
-        showContent(this.id, this.id, fakeData);
-      }
-      else{
-        showContent("playbook-overview", this.id, fakeData);
-      }        
-    });    
-  });
-  
-  
-  var fakeData = {
-    pageName: "playbook-overview",
-    playbooks: [
+  //for dev purposes : TODO: remove.
+   /*var fakeData =  [
       {
         playbookName: "playbook1"
       },
@@ -71,9 +58,33 @@
       {
         playbookName: "playbook3"
       }
-    ]
-  }
+    ]*/
 
+    $(function() {  
+      initIndex(function (initData) {
+        showContent("home", "home", initData);
+        $(document).on("click",".nav",function(ev) {
+          ev.preventDefault();
+          if(this.id === "home"){
+            showContent(this.id, this.id, initData);
+          }
+          else{
+            showContent("playbook-overview", this.id, initData);
+          }        
+        });  
+      });       
+    });
+
+//don't need to insert here
+//TODO: Remove becausethis is just seed data
+ var initIndex = function (callback) {
+    dataAccess.insertMany({}, function () {
+          dataAccess.findAllPlaybooks(function(docs) {
+          callback(docs);
+        })
+    });
+
+ }
 </script>
 
 </html>
