--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script>
       var $ = jQuery = require("jquery");
     </script>
+    <script src=".\node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container-fluid" id="wrapper">
