insert play functionality

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>ESportsPlaybook</title>
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" href=".\node_modules\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script>
       var $ = jQuery = require("jquery");
     </script>
-    <script src=".\node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
+    <script src="./css/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container-fluid" id="wrapper">
